--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
@@ -166,12 +166,13 @@
 
         <TextView
             android:id="@+id/timerView"
+            android:visibility="gone"
             android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="14sp"
+            android:textSize="16sp"
             android:layout_marginEnd="10dp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/black_de"
             android:text="00:00.0"/>
 
         <sound.recorder.widget.tools.RecorderWaveformView
@@ -183,6 +184,7 @@
 
 
         <ImageView
+            android:layout_marginStart="5dp"
             android:background="@drawable/button_setting_color"
             android:id="@+id/settingBtn"
             android:padding="10dp"
