--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
@@ -125,6 +125,7 @@
             <ImageView
                 android:id="@+id/recordBtn"
                 android:layout_width="40dp"
+                android:layout_marginStart="6dp"
                 android:layout_height="40dp"
                 android:layout_centerInParent="true"
                 android:background="@drawable/button_record_color"
