--- a/soundrecorder/src/main/res/layout/widget_record_vertical.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_vertical.xml
@@ -198,14 +198,14 @@
             android:layout_marginBottom="5dp"
             app:srcCompat="@drawable/ic_baseline_settings_24" />
 
-        <sound.recorder.widget.tools.RecorderWaveformView
+      <!--  <sound.recorder.widget.tools.RecorderWaveformView
             android:layout_marginTop="10dp"
             android:visibility="gone"
             android:id="@+id/playerView"
             android:rotation="-90"
             android:layout_marginBottom="5dp"
             android:layout_width="40dp"
-            android:layout_height="40dp" />
+            android:layout_height="40dp" />-->
 
     </LinearLayout>
 
