--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_new.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_new.xml
@@ -145,12 +145,12 @@
             android:text="00:00.0"
             tools:ignore="HardcodedText" />
 
-        <sound.recorder.widget.tools.RecorderWaveformView
+     <!--   <sound.recorder.widget.tools.RecorderWaveformView
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:id="@+id/playerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" />-->
 
 
     </LinearLayout>
