--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_zaif.xml
@@ -175,7 +175,7 @@
             android:textStyle="bold"
             android:layout_marginEnd="10dp"
             android:textColor="@color/red_A700"
-            android:text="REC"/>
+            android:text="REC ◉"/>
 
 
        <!-- <sound.recorder.widget.tools.RecorderWaveformView
