--- a/soundrecorder/src/main/res/layout/activity_player.xml
+++ b/soundrecorder/src/main/res/layout/activity_player.xml
@@ -14,14 +14,14 @@
         app:layout_constraintTop_toTopOf="parent"
         app:title="" />
 
-    <sound.recorder.widget.tools.PlayerWaveformView
+   <!-- <sound.recorder.widget.tools.PlayerWaveformView
         android:id="@+id/playerView"
         android:layout_width="250dp"
         android:layout_height="250dp"
         app:layout_constraintBottom_toTopOf="@+id/seekBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" />-->
 
     <com.google.android.material.chip.Chip
         android:id="@+id/chip"
