--- a/soundrecorder/src/main/res/layout/widget_record_vertical_zaif.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_vertical_zaif.xml
@@ -70,6 +70,7 @@
         </RelativeLayout>
 
         <ImageView
+            android:layout_marginTop="5dp"
             android:id="@+id/deleteBtn"
             android:visibility="gone"
             android:clickable="false"
