--- a/soundrecorder/src/main/res/layout/custom_cancel_dialog.xml
+++ b/soundrecorder/src/main/res/layout/custom_cancel_dialog.xml
@@ -25,6 +25,7 @@
         <TextView
             android:id="@+id/tvDialogMessage"
             android:gravity="center"
+            android:textColor="@color/black_de"
             android:fontFamily="@font/ooredoo"
             android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
