--- a/soundrecorder/src/main/res/layout/custom_cancel_dialog.xml
+++ b/soundrecorder/src/main/res/layout/custom_cancel_dialog.xml
@@ -17,7 +17,7 @@
             android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Notification"
+            android:text="@string/notification"
             android:textColor="@color/black_de"
             android:textSize="30sp"
             android:fontFamily="@font/rodfellows_wacky" />
