--- a/soundrecorder/src/main/res/layout/widget_record_vertical.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_vertical.xml
@@ -177,20 +177,25 @@
 
         </RelativeLayout>
 
+
+
         <TextView
             android:id="@+id/timerView"
-            android:layout_marginTop="3dp"
+            android:layout_marginStart="10dp"
+            android:visibility="gone"
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:textSize="10sp"
-            android:fontFamily="@font/intercom_roboto_medium"
-            android:textColor="@color/black_de"
-            android:text="00:00.0"
-            tools:ignore="HardcodedText,SmallSp" />
+            android:layout_height="wrap_content"
+            android:textSize="16sp"
+            android:layout_marginTop="5dp"
+            android:textStyle="bold"
+            android:layout_marginEnd="10dp"
+            android:textColor="@color/red_A700"
+            android:text="REC◉"/>
 
 
         <ImageView
             android:layout_weight="1"
+            android:layout_marginTop="5dp"
             android:contentDescription="@string/app_name"
             android:id="@+id/settingBtn"
             android:layout_width="40dp"
