--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,13 @@
     <FrameLayout
         android:id="@+id/bannerView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="60dp"/>
+
+    <FrameLayout
+        android:id="@+id/bannerFacebook"
+        android:layout_alignParentEnd="true"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"/>
 
 
     <sound.recorder.widget.util.SpeedMarquee
@@ -36,7 +42,7 @@ Pembaruan UI: Kode ini sudah berada di thread UI, sehingga runOnUiThread tidak p
         app:marquee_speed="100.0"
         tools:ignore="HardcodedText" />
 
-    <androidx.fragment.app.FragmentContainerView
+   <!-- <androidx.fragment.app.FragmentContainerView
         android:layout_below="@+id/tvRunningText"
         android:id="@+id/recordingViewVerticalZaif"
         android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentVerticalZaif"
@@ -50,11 +56,30 @@ Pembaruan UI: Kode ini sudah berada di thread UI, sehingga runOnUiThread tidak p
         android:id="@+id/recordingViewVertical"
         android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentVertical"
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>-->
+
+
+    <androidx.fragment.app.FragmentContainerView
+        android:layout_below="@+id/tvRunningText"
+        android:id="@+id/record1"
+        android:layout_alignParentStart="true"
+        android:layout_width="wrap_content"
+        android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentHorizontalZaif"
         android:layout_height="wrap_content"/>
+
+  <!--  <androidx.fragment.app.FragmentContainerView
+        android:id="@+id/record2"
+        android:layout_below="@+id/record1"
+        android:layout_toEndOf="@+id/recordingViewVertical"
+        android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentHorizontal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>-->
+
+
 
     <LinearLayout
         android:layout_marginTop="60dp"
-        android:layout_toEndOf="@+id/recordingViewVertical"
+        android:layout_toEndOf="@+id/record1"
         android:layout_below="@+id/bannerView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -64,17 +89,6 @@ Pembaruan UI: Kode ini sudah berada di thread UI, sehingga runOnUiThread tidak p
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/record1"
-            android:layout_width="wrap_content"
-            android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentHorizontalZaif"
-            android:layout_height="wrap_content"/>
-
-        <androidx.fragment.app.FragmentContainerView
-            android:id="@+id/record2"
-            android:name="sound.recorder.widget.ui.fragment.VoiceRecordFragmentHorizontal"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
 
         <Button
             android:id="@+id/btn1"
