--- a/soundrecorder/src/main/res/layout/activity_listing_new.xml
+++ b/soundrecorder/src/main/res/layout/activity_listing_new.xml
@@ -4,10 +4,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="match_parent"
+    android:background="@color/white"
     tools:context=".ui.activity.ListingActivity">
-
 
     <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
@@ -34,26 +33,28 @@
                 android:layout_height="?actionBarSize"
                 app:title="@string/recordings"
                 app:layout_collapseMode="pin">
+
                 <RelativeLayout
                     android:id="@+id/editorBar"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:visibility="gone">
+
                     <ImageView
                         android:id="@+id/btnClose"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        app:srcCompat="@drawable/ic_close"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        app:srcCompat="@drawable/ic_close" />
 
                     <ImageView
                         android:id="@+id/btnSelectAll"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
-                        app:srcCompat="@drawable/ic_list"
                         android:layout_marginEnd="16dp"
-                        android:contentDescription="@string/app_name" />
+                        android:contentDescription="@string/app_name"
+                        app:srcCompat="@drawable/ic_list" />
                 </RelativeLayout>
 
             </com.google.android.material.appbar.MaterialToolbar>
@@ -64,103 +65,93 @@
             android:layout_height="wrap_content"
             app:hintEnabled="false"
             style="@style/EditTextSearch">
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/searchInput"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:imeOptions="actionSearch"
-                android:textColor="@color/colorText"
                 android:hint="@string/search_record"
-                android:textColorHint="@color/colorGrayDark"
                 android:inputType="text"
-                tools:ignore="HardcodedText" />
+                android:textColor="@color/colorText"
+                android:textColorHint="@color/colorGrayDark" />
         </com.google.android.material.textfield.TextInputLayout>
-
 
     </com.google.android.material.appbar.AppBarLayout>
 
-
     <androidx.recyclerview.widget.RecyclerView
-        android:background="@color/white"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
         android:id="@+id/recyclerview"
         android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_marginBottom="50dp"
-        android:layout_height="match_parent"/>
+        android:background="@color/white"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
     <LinearLayout
         android:id="@+id/bottomSheet"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:orientation="horizontal"
         android:padding="5dp"
         android:gravity="center"
-        app:behavior_hideable="true"
-        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
         android:background="@color/colorBackground"
-        android:baselineAligned="false">
+        app:behavior_hideable="true"
+        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">
 
         <LinearLayout
-            android:visibility="gone"
             android:id="@+id/llRename"
-            android:layout_weight="1"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
             android:gravity="center"
-            android:layout_marginEnd="10dp"
-            android:orientation="vertical">
+            android:orientation="vertical"
+            android:visibility="gone"
+            android:layout_marginEnd="10dp">
+
             <Button
                 android:id="@+id/btnRename"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:padding="10dp"
-                android:clickable="false"
                 android:text="Rename"
-                tools:ignore="HardcodedText" />
-
+                android:padding="10dp"
+                android:clickable="true" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llDelete"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:layout_marginStart="10dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="10dp"
             android:gravity="center"
-            android:orientation="vertical"
-            android:focusable="true">
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnDelete"
-                android:clickable="false"
-                android:text="@string/delete"
-                android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:ignore="HardcodedText" />
-
+                android:text="@string/delete"
+                android:padding="10dp"
+                android:clickable="true" />
         </LinearLayout>
 
         <LinearLayout
             android:id="@+id/llCancel"
-            android:layout_weight="1"
-            android:clickable="true"
-            android:layout_marginStart="10dp"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:layout_marginStart="10dp"
             android:gravity="center"
-            android:orientation="vertical"
-            android:focusable="true">
+            android:orientation="vertical">
 
             <Button
                 android:id="@+id/btnCancel"
-                android:clickable="false"
-                android:text="@string/cancel"
-                android:padding="10dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                tools:ignore="HardcodedText" />
-
+                android:text="@string/cancel"
+                android:padding="10dp"
+                android:clickable="true" />
         </LinearLayout>
     </LinearLayout>
+
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
