--- a/soundrecorder/src/main/res/layout/custom_cancel_dialog.xml
+++ b/soundrecorder/src/main/res/layout/custom_cancel_dialog.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:background="@drawable/gradient_dialog"
+    android:background="@color/grey_600"
     android:layout_height="wrap_content">
 
     <LinearLayout
@@ -18,14 +18,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/notification"
-            android:textColor="@color/black_de"
+            android:textColor="@color/yellow_200"
             android:textSize="30sp"
             android:fontFamily="@font/rodfellows_wacky" />
 
         <TextView
             android:id="@+id/tvDialogMessage"
             android:gravity="center"
-            android:textColor="@color/black_de"
+            android:textColor="@color/yellow_200"
             android:fontFamily="@font/ooredoo"
             android:layout_marginHorizontal="16dp"
             android:layout_width="match_parent"
