--- a/soundrecorder/src/main/res/layout/widget_record_horizontal.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal.xml
@@ -102,7 +102,7 @@
         <ImageView
             android:visibility="gone"
             android:layout_marginStart="6dp"
-            android:id="@+id/deleteBtn"
+            android:id="@+id/ivDelete"
             android:clickable="false"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -127,7 +127,7 @@
                 tools:ignore="DuplicateSpeakableTextCheck" />
 
             <ImageView
-                android:id="@+id/recordBtn"
+                android:id="@+id/ivRecord"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_centerInParent="true"
@@ -150,14 +150,14 @@
         </RelativeLayout>
 
         <ImageView
-            android:id="@+id/listBtn"
+            android:id="@+id/ivListRecord"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:contentDescription="@string/app_name"
             app:srcCompat="@drawable/ic_menu" />
 
         <ImageView
-            android:id="@+id/doneBtn"
+            android:id="@+id/ivDone"
             android:visibility="gone"
             android:layout_marginStart="5dp"
             android:layout_width="40dp"
@@ -165,7 +165,7 @@
             app:srcCompat="@drawable/ic_done"/>
 
         <TextView
-            android:id="@+id/timerView"
+            android:id="@+id/tvTimerView"
             android:visibility="gone"
             android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
@@ -195,7 +195,7 @@
 
 
         <ImageView
-            android:id="@+id/settingBtn"
+            android:id="@+id/ivSetting"
             android:layout_marginEnd="10dp"
             android:layout_width="40dp"
             android:layout_height="40dp"
