--- a/soundrecorder/src/main/res/layout/widget_record_horizontal_new.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_horizontal_new.xml
@@ -62,7 +62,7 @@
         <ImageView
             android:visibility="gone"
             android:layout_marginStart="6dp"
-            android:id="@+id/deleteBtn"
+            android:id="@+id/ivDelete"
             android:clickable="false"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -85,7 +85,7 @@
                 tools:ignore="DuplicateSpeakableTextCheck" />
 
             <ImageView
-                android:id="@+id/recordBtn"
+                android:id="@+id/ivRecord"
                 android:layout_width="60dp"
                 android:layout_height="60dp"
                 android:layout_centerInParent="true"
@@ -110,14 +110,14 @@
         </RelativeLayout>
 
         <ImageView
-            android:id="@+id/listBtn"
+            android:id="@+id/ivListRecord"
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:contentDescription="@string/app_name"
             app:srcCompat="@drawable/ic_menu" />
 
         <ImageView
-            android:id="@+id/doneBtn"
+            android:id="@+id/ivDone"
             android:visibility="gone"
             android:layout_width="40dp"
             android:layout_height="40dp"
@@ -125,7 +125,7 @@
             android:contentDescription="@string/app_name" />
 
         <ImageView
-            android:id="@+id/settingBtn"
+            android:id="@+id/ivSetting"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
             android:layout_width="40dp"
@@ -135,7 +135,7 @@
 
 
         <TextView
-            android:id="@+id/timerView"
+            android:id="@+id/tvTimerView"
             android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
