--- a/soundrecorder/src/main/res/layout/widget_record_vertical_basuri.xml
+++ b/soundrecorder/src/main/res/layout/widget_record_vertical_basuri.xml
@@ -101,7 +101,7 @@
 
                 <ImageView
                     android:visibility="gone"
-                    android:id="@+id/deleteBtn"
+                    android:id="@+id/ivDelete"
                     android:layout_width="40dp"
                     android:layout_height="44dp"
                     android:layout_centerInParent="true"
@@ -129,7 +129,7 @@
                     tools:ignore="DuplicateSpeakableTextCheck" />
 
                 <ImageView
-                    android:id="@+id/recordBtn"
+                    android:id="@+id/ivRecord"
                     android:layout_width="40dp"
                     android:layout_height="40dp"
                     android:layout_centerInParent="true"
@@ -152,7 +152,7 @@
             </RelativeLayout>
 
             <ImageView
-                android:id="@+id/listBtn"
+                android:id="@+id/ivListRecord"
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_centerInParent="true"
@@ -166,7 +166,7 @@
 
                 <ImageView
                     android:layout_centerInParent="true"
-                    android:id="@+id/doneBtn"
+                    android:id="@+id/ivDone"
                     android:visibility="gone"
                     android:layout_marginTop="5dp"
                     android:layout_width="40dp"
@@ -176,7 +176,7 @@
             </RelativeLayout>
 
             <TextView
-                android:id="@+id/timerView"
+                android:id="@+id/tvTimerView"
                 android:layout_marginTop="3dp"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
@@ -189,7 +189,7 @@
             <ImageView
                 android:layout_weight="1"
                 android:contentDescription="@string/app_name"
-                android:id="@+id/settingBtn"
+                android:id="@+id/ivSetting"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginBottom="5dp"
