--- a/soundrecorder/src/main/res/layout/activity_splash_sdk.xml
+++ b/soundrecorder/src/main/res/layout/activity_splash_sdk.xml
@@ -25,14 +25,12 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/animation_view1" />
 
-    <com.airbnb.lottie.LottieAnimationView
+    <ImageView
         android:id="@+id/animation_view1"
         android:layout_width="200dp"
         android:layout_height="200dp"
         android:scaleType="centerInside"
-        app:lottie_autoPlay="true"
-        app:lottie_loop="true"
-        app:lottie_rawRes="@raw/splash_screen_1"
+        android:src="@mipmap/ic_launcher"
         app:layout_constraintBottom_toTopOf="@id/tvTitle"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
